Home page completed for desktop/mobile view

--- a/portfolio-new/src/app/globals.css
+++ b/portfolio-new/src/app/globals.css
@@ -5,3 +5,24 @@
 body {
   font-family: 'Roboto', sans-serif;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 1px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ffffff;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #888;
+}
